<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Partyfi</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_create_party">CreatePartyActivity</string>
    <string name="title_activity_delete_party">DeletePartyActivity</string>
    <string name="email_hint">Enter your Email</string>
    <string name="date_hint">Pick a date</string>
    <string name="time_hint">Pick a time</string>
    <string name="date_label">Date</string>
    <string name="time_label">Time</string>
    <string name="str_btn_find">Create Event</string>
    <string name="hnt_et_location">Enter location</string>
    <string name="title_activity_friend__main__search1">Friend_Main_Search1</string>
    <string name="title_activity_friend__main__search2">Friend_Main_Search2</string>
    <string name="title_activity_friend__profile">Friend_Profile</string>
    <string name="title_activity_friend__main__friends_list">Friend_Main_FriendsList</string>
    <string name="title_activity_dbadapter">DBAdapter</string>
    <string name="title_label">Enter title of event</string>
    <string name="description_label">Enter event description</string>
    <string name="title_activity_login">Login</string>

</resources>
