
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.arnold.partyfi.CreatePartyActivity$PlaceholderFragment">

        <Button
            android:id="@+id/btn_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_btn_find"
            android:layout_gravity="center"
            android:layout_toEndOf="@+id/button"
            android:layout_below="@+id/titleText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="58dp" />

        <EditText
            android:id="@+id/datePick"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_label"
            android:inputType="datetime"
            android:imeOptions="actionSend"
            android:layout_below="@+id/button2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_hint"
            android:onClick="showTimePickerDialog"
            android:id="@+id/button"
            android:layout_below="@+id/datePick"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/timePick"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time_label"
            android:inputType="datetime"
            android:imeOptions="actionSend"
            android:layout_below="@+id/button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_hint"
            android:onClick="showDatePickerDialog"
            android:id="@+id/button2"
        />

        <EditText
            android:id="@+id/descText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/description_label"
            android:inputType="text"
            android:layout_below="@+id/titleText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <EditText
            android:id="@+id/titleText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_label"
            android:inputType="text"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:id="@+id/et_location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hnt_et_location"
            android:layout_gravity="center_horizontal|top"
            android:layout_above="@+id/titleText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
</LinearLayout>